--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "A video conferencing web application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/harshitagrawal294/Engage-Teams.git"
   },
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "author": "Harshit",
   "license": "ISC",
   "bugs": {
